added gallery functionality to frontend
